# simple_pimpl

./: CMakeLists.txt  README.md  format_src.sh
inc/: document.h  draw.h  my_class.h  simple_model.h
src/: CMakeLists.txt  document.cxx  main.cxx  my_class.cxx
